--- a/public/index.html
+++ b/public/index.html
@@ -38,5 +38,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="popup-root" class="is-hide"></div>
   </body>
 </html>
